--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server.js",
+    "dev": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch",
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
@@ -34,6 +35,7 @@
     "react-redux": "5.0.7",
     "react-router": "^2.0.1",
     "redux": "4.0.0",
-    "youtube-api-search": "0.0.5"
+    "youtube-api-search": "0.0.5",
+    "express": "^4.14.0"
   }
 }
