--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "chai-jquery": "^2.0.0",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
-    "lodash": "^3.10.1",
+    "lodash": ">=4.17.11",
     "mocha": "^2.4.5",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
-    "lodash": "^3.10.1",
+    "lodash": ">=4.17.11",
     "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react-dom": ">=16.3.3",
     "react-redux": "5.0.7",
     "react-router": "^2.0.1",
     "redux": "4.0.0",
